--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-\.env
+.env
+.info.txt
+.DS_Store
+
+node_modules/
+dist/
+coverage/
+logs/
+
+*.log
+*.tmp
+
+.plan.txt
+
+.vscode/
+.idea/
+
+*.x.html
